--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pull": "drizzle-kit introspect:pglite ",
+    "generate": "drizzle-kit generate:pglite",
+    "drop": "drizzle-kit drop",
+    "check": "drizzle-kit check:pglite",
+    "up": "drizzle-kit up:pg"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
