--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pull": "drizzle-kit introspect:pglite ",
-    "generate": "drizzle-kit generate:pglite",
+    "pull": "drizzle-kit pull ",
+    "generate": "drizzle-kit generate",
     "drop": "drizzle-kit drop",
-    "check": "drizzle-kit check:pglite",
-    "up": "drizzle-kit up:pg"
+    "check": "drizzle-kit check",
+    "up": "drizzle-kit up"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
