--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "up": "drizzle-kit up"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
