--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "pull": "drizzle-kit pull --dialect=postgresql --url=postgresql://postgres.qklvfydgsfasuzelpesb:harjap9463628874@aws-0-us-west-1.pooler.supabase.com:6543/postgres --out=migrations",
+    "push": "drizzle-kit push --dialect=postgresql --schema=./lib/supabase/schema.ts --url=postgresql://postgres.qklvfydgsfasuzelpesb:harjap9463628874@aws-0-us-west-1.pooler.supabase.com:6543/postgres",
     "generate": "drizzle-kit generate",
     "drop": "drizzle-kit drop",
     "check": "drizzle-kit check",
     "up": "drizzle-kit up"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.2.17",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
