--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.10",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@stripe/stripe-js": "^7.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
